--- a/style.css
+++ b/style.css
@@ -1,130 +1,326 @@
-body{
-	font-family: 'Open Sans', sans-serif;
-	margin: 0;
-	padding: 0;
-
+body {
+	font-family: 'Fira Sans', sans-serif;
+	color: #8D8D8D;
+	font-size: 18px;
 }
+
 button {
 	display: block;
 	border: none;
+	background: transparent;
 }
+
 ul, li {
 	display: block;
 	padding: 0;
 	margin: 0;
 }
-h1{
-	font-family: 'Permanent Marker', cursive
-}
-header{
-	background-image: url('img/header-bg.png');
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 100vh;
-}
 
-.nav{
-
-}
-.menu{
-	text-decoration: none;
+.vh-dependent {
+	height: 35vh;
 	display: flex;
-	justify-content: space-around;
-	margin-top: 60px;
-	border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-	font-family: Open Sans;
+    align-items: center;
+}
+
+.be-static {
+	position: static;
+}
+
+h1, h2, h3, h4, h5, h6 {
 	font-style: normal;
-	font-weight: bold;
-	font-size: 12px;
-	line-height: 18px;
+	font-weight: 700;
+	color: #151515;
+	margin: 0;
+	padding: 0;
+}
+
+h2 {
+	font-size: 38px;
+}
+
+h3 {
+	font-size: 22px;
+}
+
+.btn {
+	background: #4737FF;
 	color: #fff;
-
-
-}
-.menu a{
-	text-decoration: none;
-	color: #fff;
-}
-.left-menu{
-
-}
-
-.point{
 	text-transform: uppercase;
-	display: block;
-	font-size: 12px;
-	line-height: 18px;
-	margin-bottom: 20px;
-}
-.right-menu{
-
-}
-.logo{
-	margin-top: 20px;
-}
-.header-main{
+	font-weight: 500;
+	font-size: 14px;
+	padding: 13px 26px;
+	display: inline;
+	border-radius: 0;
+	letter-spacing: 0.3em;
 	text-align: center;
-    margin-top: 15%;
+	transition: all 0.5s ease;
 }
-.main-text{
+
+.btn:hover {
+	background: #3726F2;
+	color: #fff;
+}
+
+.header {
+	height: 95vh;
+}
+
+.nav {
+	padding-top: 59px;
+	margin-bottom: 127px;
+}
+
+.logo {
 
 }
-.main-text__rest{
-	font-style: normal;
-	font-weight: bold;
-	font-size: 12px;
-	line-height: 14px;
-	color: #fff;
-	letter-spacing: 0.5em;
+
+.search {
+	
+}
+
+.menu {
+	
+}
+
+
+.offer-cont__title {
+	font-size: 60px;
+	letter-spacing: -0.01em;
+	line-height: 1.2em;
+}
+
+
+.offer-cont__text {
+	margin: 30px 0 56px;
+}
+
+
+.offer-cont__btn {
+
+}
+
+.hero {
+	background: url('img/img1.jpg');
+	background-position: right bottom;
+	background-size: 80% 100%;
+	background-repeat: no-repeat;
+	width: 55%;
+	height: 80vh;
+	position: absolute;
+    right: 0;
+    top: 142px;
+}
+
+.video {
+	position: absolute;
+	left: 0;
+	bottom: 20%;
+	width: 40%;
+	height: 33%;
+	display: block;
+	background: url('img/video.jpg');
+	background-repeat: no-repeat;
+	background-position: center center;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.video:after {
+	content:'';
+	display: block;
+	background: url('img/play.svg');
+	width: 65px;
+	height: 65px;
+}
+.problems{
+	padding-top: 137px;
+}
+.about{
+
+}
+.about__title{
+	font-size: 38px;
+	margin-bottom: 30px;
+}
+.about__autor{
+	background: url('img/author.jpg');
+	background-repeat: no-repeat;
+	background-position: left center;
+	padding:7px 0 7px 96px;
+}
+.about__name{
+	font-size: 22px;
+}
+.about__dop{
+	margin-bottom: 0;
+}
+.services{
+	padding-top: 142px;
+}
+.section-title{
+
+}
+.section-title__label{
+	font-size: 14px;
 	text-transform: uppercase;
+	letter-spacing: 0.25em;
+	color: #8f8f8f;
 	margin-bottom: 40px;
 }
-.main-text__hangry{
-	font-size: 90px;
-	line-height: 0px;
-	color: #fff
-}
-.klik{
-	width: 200px;
-	height: 60px;
-	background-color: transparent;
-	border: 1px solid rgba(255, 255, 255, 0.2);
-	border-radius: 5px;
-	font-style: normal;
-	font-weight: bold;
-	font-size: 12px;
-	line-height: 20px;
-	color:#fff;
-	text-transform: uppercase;
-	transition: all 0.5s ease;
-
+.section-title__heading{
 
 }
-.klik:hover{
-	background: #E8C300
+
+.serv-list{
+	margin-top: 66px;
 }
-.main-buttons{
+.serv-list__item{
+	margin-bottom: 20px;
+}
+.works-carousel{
+	margin-top: 99px;
+}
+.works-carousel .item, .works-carousel .owl-item{
+	width: 825px !important;
+}
+.works-carousel .owl-nav{
+	margin-top: 50px;
 	display: flex;
-	justify-content: center;
-	margin: 50px 0 80px 0;
+}
+.works-carousel .owl-prev{
+	margin-right: 25px;
+}
+.result{
+	padding-top: 219px;
+}
+.collage{
+	width: 50%;
+	height: 540px;
+	background: url('img/img6.jpg');
+	background-repeat: no-repeat;
+	background-position: left top;
+	-webkit-background-size: 80% 80%;
+	background-size: 80% 80%;
+	position: absolute;
+	left: 0;
+}
+.collage img{
+	display: block;
+	width: 350px;
+	height: 453px;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	box-shadow: 30px 80px 130px rgba(0,0,0,0.25);
+}
+.ease{
+	margin-left: 30px;
+	margin-top: 20px;
+}
+.ease__title{
+	margin-bottom: 30px;
+}
+.ease__text{
+	margin-bottom: 52px;
+}
+.ease__point{
+	padding-left: 83px;
+	text-transform: uppercase;
+	letter-spacing: 0.3em;
+	color: #000;
+	font-size: 14px;
+	font-weight: 500;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	margin-bottom: 25px;
+}
+.first_point{
+	background: url('img/icon100.svg');
+	background-repeat: no-repeat;
+	background-position: left center;
+}
+.second_point{
+	background: url('img/bag.svg');
+	background-repeat: no-repeat;
+	background-position: left center;
+}
+
+.works{
+	padding-top: 283px;
+}
+.works-tabs{
+	margin-left: 60px;
+	font-size: 14px;
+	text-transform: uppercase;
+	letter-spacing: 0.3em;
+	width: 100%;
+	margin-top: 70px;
+}
+.works-tabs__item a{
+	text-decoration: none;
+	color: #8d8d8d
+}
+.works-tabs__item a:focus{
+	
+	color: #1434e1;
+}
+
+.wrap{
+	margin-top: 30px;
+}
+.works-wrap__item img{
+	transition: all 1s ease;
+}
+.works-wrap__item:hover img{
+	-moz-transform: scale(1.1);
+-webkit-transform: scale(1.1);
+-o-transform: scale(1.1);
+-ms-transform: scale(1.1);
+transform: scale(1.1);
+	box-shadow: -30px 80px 200px rgba(0,0,0,0.25)
+}
+.works-wrap__item:after{
+	transition: all 1s ease;
+}
+.tabs__content {
+  display: none; /* по умолчанию прячем все блоки */
+}
+.tabs__content.active {
+  display: block; /* по умолчанию показываем нужный блок */
+}
+.testimonials{
+	padding-top: 248px;
+}
+.contributor{
+	margin-top: 125px;
+}
+.contributor__title{
 
 }
-.main-buttons__book{
-	margin-right: 40px;
-}
-.main-buttons__expl{
+.contributor__desc{
 
 }
-.yelow-line{
-	margin: 55px auto;
-	width: 60px;
-	height: 5.11px;
-	background: #E8C300;
-	border-radius: 50px;
+.contributor-carousel .owl-nav{
+	display: flex;
+	margin-top: -50px;
+	position: relative;
 }
-.down-btn{
-	transition: all 0.5s ease-out;
+.contributor-carousel .owl-prev{
+	margin-right: 30px;
 }
-.down-btn:hover{
-	transform: scale(1.2, 1.2);
+.our{
+	margin-top: 250px;
+}
+.clients-row{
+	margin-top: 127px;
+	margin-bottom: 100px;
+}
+footer{
+	height: 240px;
+    background: #515151;
+    margin-top: 136px;
+}
+footer img{
+	margin: 109px 0 109px 0;
 }
