--- a/rest/style.css
+++ b/rest/style.css
@@ -64,7 +64,7 @@ header{
 }
 .header-main{
 	text-align: center;
-    margin-top: 15%;
+    margin-top: 11%;
 }
 .main-text{
 
@@ -116,7 +116,7 @@ header{
 
 }
 .yelow-line{
-	margin: 55px auto;
+	margin: 5% auto;
 	width: 60px;
 	height: 5.11px;
 	background: #E8C300;
@@ -127,4 +127,237 @@ header{
 }
 .down-btn:hover{
 	transform: scale(1.2, 1.2);
+}
+.aboutUs{
+	margin-top: 5%;
+}
+.text-part{
+	text-align: center;
+	padding-top: 10%;
+}
+.aboutUs__main{
+	font-family: 'Permanent Marker', cursive;
+	font-size: 36px;
+	line-height: 48px;
+	font-weight: 400;
+}
+.strong-text{
+	font-weight: bold;
+	font-size: 16px;
+line-height: 28px;
+}
+.usualy-text{
+	font-size: 14px;
+line-height: 24px;
+}
+.image-block1{
+ position: relative;
+ 
+}
+.yelow-rectangle{
+	width: 200px;
+	position: absolute;
+	height: 200px;
+	border: 17px solid #E8C300;
+	top: 30%;
+	right: 2%;
+}
+.ourTeam{
+	background-image: url(img/bg-block.png);
+	color: #fff;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+.ourTeam__main{
+	padding-top: 2%;
+}
+.f-left{
+	left: -5%;
+}
+.forms{
+
+}
+.forms__main{
+	text-align: center;
+	padding-top: 5%;
+}
+.forms__main-text{
+	font-family: 'Permanent Marker', cursive;
+	font-size: 36px;
+	line-height: 48px;
+	font-weight: 400;
+}
+.text{
+
+}
+.forms__main__left-block{
+	padding-top: 10%;
+}
+.booking{
+	width: 100%;
+	height: 50px;
+	background: #E5E5E5;
+	border-radius: 5px;
+	border: none;
+	margin-top: 4%;
+	padding-left: 4%;
+	font-size: 15px;
+}
+button{
+	width: 100%;
+	height: 50px;
+	margin-top: 3%;
+	background: #E8C300;
+	border-radius: 5px;
+	font-family: Open Sans;
+font-style: normal;
+font-weight: bold;
+font-size: 13px;
+line-height: 20px;
+}
+.eror-img{
+	width: 90%;
+}
+.navig{
+	text-align: center;
+	margin-top: 5%;
+
+}
+.nav-main{
+	
+}
+.nav__navigation{
+
+}
+.nav__navigation__pool{
+	display: flex;
+	justify-content: center;
+	
+}
+.nav__navigation__pool li{
+	padding: 0 3%;
+	border-right: solid 1px darkgray;
+}
+.no-border{
+	border-right: none;
+}
+.nav__text{
+	font-family: 'Permanent Marker', cursive;
+    font-size: 36px;
+    line-height: 48px;
+    font-weight: 400;
+}
+.yelow-line{
+
+}
+.menu-nav{
+	color: black;
+	font-weight: bold;
+}
+.items-price{
+	margin-top: 5%;
+}
+.item-menu{
+	display: flex;
+	color: #333333;
+	line-height: 10px;
+	margin-top: 2%;
+}
+.left-part{
+	
+}
+.price{
+	font-family: 'Permanent Marker', cursive;
+	margin-left: 5%;
+	font-size: 18px;
+}
+.name-food{
+	font-size: 18px;
+	font-family: 'Permanent Marker', cursive;
+	
+}
+.discription{
+	font-size: 10px;
+	margin-top: 0;
+	color: #B3B3B3;
+}
+.interier{
+
+}
+.images{
+	display: flex;
+	width: 100%;
+	margin: 7% 0 3% 0;
+	
+}
+.image{
+ width: 25%;
+}
+.image img{
+	width: 100%;
+}
+.contact{
+	
+}
+.contact__title{
+	text-align: center;
+	font-family: 'Permanent Marker', cursive;
+    font-size: 36px;
+    line-height: 48px;
+    font-weight: 400;
+}
+.contact-line{
+	margin: 2% auto;
+}
+.lorem{
+	text-align: center;
+	font-family: Open Sans;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 15px;
+	line-height: 28px;
+	width: 50%;
+    margin: 0 auto;
+
+}
+.top-contact{
+	display: flex;
+	width: 100%;
+}
+.contact-data{
+	width: 100%;
+}
+.contact-data input{
+	width: 95%;
+	height: 50px;
+	background: #E5E5E5;
+    border-radius: 5px;
+    border: none;
+    margin-top: 4%;
+    padding-left: 4%;
+    font-size: 15px;
+}
+.massage {
+	width: 98%;
+	height: 100px;
+	margin-top: 2%;
+}
+.massage textarea{
+	width: 100%;
+	height: 100%;
+	background: #E5E5E5;
+    border-radius: 5px;
+    border: none;
+    
+    padding: 1% 2%;
+    font-size: 15px;
+}
+button{
+	text-transform: uppercase;
+}
+.call-out{
+	display: flex;
+	font-size: 13px;
+	justify-content: space-between;
+	margin-top: 5%;
 }
